--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.7.5",
-    "@types/react": "~18.2.79",
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.24",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "9.13.6",
-    "typescript": "~5.3.3",
-    "@expo/vector-icons": "^14.0.3",
-    "expo-checkbox": "~3.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
+    "@types/react": "~19.1.10",
+    "expo": "~54.0.10",
+    "expo-checkbox": "~5.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
